@@ -120,6 +120,10 @@ INSP.NAME.wildcards.confusing.name.with.dot.message=Confusing wildcard name: ''{
 INSP.NAME.redundant.comma.title=Comma is unnecessary
 INSP.NAME.redundant.comma.fix.message=Remove redundant comma
 
+# SmkMisuseUsageIOFlagMethodsInspection
+INSP.NAME.misuse.usage.io.flag.methods.title=Correct using methods ancient, protected, directory
+INSP.NAME.misuse.usage.io.flag.methods.warning.message=''{0}'' isn''t supported in ''{1}'' section, expected in sections: {2}.
+
 # SmkPyUnboundLocalVariableInspection
 INSP.NAME.unbound=Unbound local variable
 
