@@ -1,0 +1,5 @@
+<html>
+<body>
+Input/Output flags (e.g. ancient(..), protected(..), directory(..), etc) not supported by all rule sections. This inspection warns about such flags misuse.
+</body>
+</html>
